--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,9 @@ img {
 .portfolio-wrap {
   padding: 32px 0;
   padding-left: 16px;
+  border-bottom: solid 1px #e7e9fc;
+  border-left: solid 1px #e7e9fc;
+  border-right: solid 1px #e7e9fc;
 }
 .item_service {
   font-weight: 500;
