--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ img {
 /* header */
 
 .header {
-  border-bottom: solid 1px;
+  border-bottom: 1px solid #e7e9fc;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -138,6 +138,9 @@ img {
 .section_baner {
   background-color: var(--dark-color);
 }
+.section_strategy {
+  padding: 188px 0;
+}
 .baner_title {
   font-weight: 700;
   font-size: 56px;
@@ -145,6 +148,7 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 48px;
   color: var(--white-background-color);
+  max-width: 496px;
 }
 .baner_btn {
   font-family: inherit;
@@ -156,8 +160,10 @@ img {
   cursor: pointer;
   display: block;
   margin: 0 auto;
-  /* width: 169px; */
-  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  /* padding: 16px 32px; */
+  border: none;
   border-radius: 4px;
 }
 .baner_btn:hover,
@@ -180,7 +186,11 @@ img {
   letter-spacing: 0.02em;
   color: var(--body-text-color);
 }
-.strategy-list,
+.strategy-list {
+  display: flex;
+  gap: 24px;
+}
+/* .strategy-list, */
 .team_list,
 .portfolio_list,
 .container-flex {
@@ -219,10 +229,11 @@ img {
   margin-right: 24px;
   display: flex;
   flex-direction: column;
+  border-radius: 0px 0px 4px 4px;
 }
-/* .team_list_item:last-child {
+.team_list_item:last-child {
   margin-right: 0px;
-} */
+}
 .team_item_name {
   font-weight: 500;
   font-size: 20px;
@@ -252,10 +263,12 @@ img {
 }
 .portfolio_list {
   flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .portfolio_list_item {
   width: 360px;
-  margin-bottom: 48px;
+  /* margin-bottom: 48px; */
 }
 .portfolio-wrap {
   padding: 32px 0;
@@ -281,18 +294,20 @@ img {
 
 .footer {
   background-color: var(--dark-color);
+  padding: 100px 0;
 }
 .wrap-footer {
   width: 264px;
-  padding-bottom: 100px;
-  padding-top: 100px;
+  /* padding-bottom: 100px;
+  padding-top: 100px; */
   margin: 0;
 }
 .logo_span {
   color: var(--light-color);
   /* margin-bottom: 16px; */
 }
-.test {
+.footer_logo {
+  display: inline-block;
   margin-bottom: 16px;
 }
 .footer_text {
