--- a/css/styles.css
+++ b/css/styles.css
@@ -96,16 +96,28 @@ img {
   /* color: var(--dark-color); */
   /* padding-right: 76px; */
 }
+.center_nav {
+  align-items: center;
+}
+.header_nav_item {
+  /* padding: 24px 0; */
+}
 .header_logo_span {
   color: var(--dark-color);
 }
+.header_nav {
+  gap: 40px;
+}
 .nav_item_link {
+  display: inline-block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark-color);
-  padding-right: 40px;
+  padding: 24px 0;
+
+  /* padding-right: 40px; */
 }
 .nav_item_link:hover,
 .nav_item_link:focus,
@@ -114,13 +126,15 @@ img {
   color: var(--pressed-state-color);
 }
 .padding-header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  align-items: center;
 }
 /* header address */
 
 .address {
   font-style: normal;
+}
+.header_address {
+  gap: 40px;
 }
 .address_item_link {
   line-height: 1.5;
